[tool.poetry]
name = "sakamata-dpy"
version = "0.1.0"
description = ""
authors = ["sushi-chaaaan <sushi_code@outlook.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^0.8.0"
discord-ext-ui = {git = "https://github.com/sushi-chaaaan/discord-ext-ui.git", rev = "develop"}
discord-handler = "^0.0.5"
gspread = "^5.4.0"
python-dotenv = "^0.20.0"
songdbcore = {git = "https://github.com/sushi-chaaaan/song-db-client", rev = "02d58f117d35744c20458c3c679f81d59b87423e"}

PyNaCl = {version = "^1.5.0"}
orjson = {version = "^3.7.1"}
aiodns = {version = "^3.0.0"}
Brotli = {version = "^1.0.9"}
cchardet = {version = "^2.1.7"}
dispander = {git = "https://github.com/sushi-chaaaan/dispander.git", rev = "for2.0"}
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", rev = "master", extras = ["voice", "speed"]}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.960"
isort = "^5.10.1"
pipdeptree = "^2.2.1"
pip-autoremove = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
